<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="208dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTex_login2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_login"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="277dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTex_password2"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:hint="@string/enter_your_password"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="YOUR ARE ON SIGN UP FRAGMEN"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/layout_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />


</androidx.constraintlayout.widget.ConstraintLayout>